@@ -15,6 +15,8 @@ Version 0.3.0
 
   * Implement timestamp from_string().
 
+  * Implement sha256_to_fingerprint (), fingerprint_to_sha256 ().
+
 Version 0.2.0
 
   * First public release.
